added sessions controller and login form as well as successfully deployed to heroku

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -4,12 +4,12 @@
 
 <form action="/users" method="post">
   <div>
-    <label for="username">E-mail:</label>
+    <label for="email">E-mail:</label>
     <br>
     <input type="text" name="user[email]" value="<%= @user.email %>">
   </div>
   <div>
-    <label for="username">Password:</label>
+    <label for="password">Password:</label>
     <br>
     <input type="password" name="user[password]">
   </div>
