text for location/new now shows enter location instead of address to account for possibility of entering city or state names

--- a/app/views/locations/new.erb
+++ b/app/views/locations/new.erb
@@ -2,7 +2,7 @@
 
 <form id="new-location" action="/locations" method="post">
   <div>
-    <label for="address">Address:</label>
+    <label for="address">Enter Location:</label>
     <br>
     <input type="text" name="location[address]">
   </div>
