current weather method defined in location model displaying info from api call

--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -1,1 +1,14 @@
-<%= @location.daily_summary %>
+<h1>Location Show</h1>
+
+<h1>Results for INSERTXLOCATION</h1>
+
+<% @location.current_weather.each do |category| %>
+  <p><%= category %></p>
+
+
+<p>DAY, DATE</p>
+<h1>SUMMARY MOSTLY CLOUDY DAY</h1>
+
+<p>NEXT 3 DAYS?</p>
+
+<p>link_to historic</p>
