dotenv added and both keys now functioning in the api calls

--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -2,8 +2,7 @@
 
 <h1>Results for INSERTXLOCATION</h1>
 
-<% @location.current_weather.each do |category| %>
-  <p><%= category %></p>
+<%= @location.current_weather %>
 
 
 <p>DAY, DATE</p>
