--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -13,13 +13,15 @@
 #   <p><%= data %></p>
 # <% end %> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-6 col-md-4">
     <h4>Current</h4>
-    <%= DateTime.strptime(@location.now_weather[0].to_s, '%s').strftime('%A, %b %d, %Y') %>
-    <!-- <% @location.now_weather[1..3].each do |data| %>
+    <p>
+      <%= DateTime.strptime(@location.now_weather[0].to_s, '%s').strftime('%A, %b %d, %Y') %>
+    </p>
+    <% @location.now_weather[1..3].each do |data| %>
       <p><%= data %></p>
-    <% end %> -->
+    <% end %>
   </div>
   <div class="col col-md-8">
     <h4>Today</h4>
@@ -32,4 +34,5 @@
   <div class="col-6">
     <h4>Past</h4>
   </div>
-</div>
+</div> -->
+<%= line_chart 4 %>
