--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -1,38 +1,22 @@
 <h2>Results for <%= @location.formatted_location %></h2>
 
-<!-- <p><%= DateTime.now.strftime('%A, %b %d, %Y') %></p>
+<h4>Today</h4>
+<p><%= DateTime.now.strftime('%A, %b %d, %Y') %></p>
 <% @location.today_weather.each do |data| %>
   <p><%= data[0] %>: <%= data[1] %></p>
-<% end %> -->
+<% end %>
 
-<!-- # <% @location.future_weather.each do |data| %>
-#   <p><%= data[0] %>: <%= data[1] %></p>
-# <% end %> -->
+<h4>Current</h4>
+<% @location.now_weather.each do |data| %>
+  <p><%= data %></p>
+<% end %>
 
-<!-- # <% @location.past_weather.each do |data| %>
-#   <p><%= data %></p>
-# <% end %> -->
+<h4>Future</h4>
+<% @location.future_weather.each do |data| %>
+  <p><%= data[0] %>: <%= data[1] %></p>
+<% end %>
 
-<!-- <div class="row">
-  <div class="col-6 col-md-4">
-    <h4>Current</h4>
-    <p>
-      <%= DateTime.strptime(@location.now_weather[0].to_s, '%s').strftime('%A, %b %d, %Y') %>
-    </p>
-    <% @location.now_weather[1..3].each do |data| %>
-      <p><%= data %></p>
-    <% end %>
-  </div>
-  <div class="col col-md-8">
-    <h4>Today</h4>
-  </div>
-</div>
-<div class="row">
-  <div class="col-6">
-    <h4>Future</h4>
-  </div>
-  <div class="col-6">
-    <h4>Past</h4>
-  </div>
-</div> -->
-<%= line_chart 4 %>
+<h4>Past</h4>
+<% @location.past_weather.each do |data| %>
+  <p><%= data %></p>
+<% end %>
