reverted back to location model only for MVP

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,5 @@
 USER SHOW PAGE
 
-<%= erb :'locations/new' %>
+<% @user.locations.each do |location| %>
+  <p><%= location.address %></p>
+<% end %>
