dummy information in place to style css without making further api calls

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
   <link rel="stylesheet" href="/css/application.css">
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <title>SkyCast</title>
 </head>
@@ -29,7 +28,7 @@
           <li><a href="/users/new">register</a></li>
           <li><a href="/sessions/new">login</a></li>
         <% end %>
-        <li><a href="/">home</a></li>
+        <li><a href="/locations/new">search</a></li>
       </ul>
     </nav>
     <div class="layout-header">
