--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,13 +13,15 @@
 
   <script src="//www.google.com/jsapi"></script>
   <script src="/JS/chartkick.js"></script>
+
+
 </head>
 <body>
   <header>
     <nav>
       <ul>
         <% if logged_in? %>
-          <li><a href="/users/<%= current_user.id %>"><%= current_user.email %></li>
+          <li><a href="/users/<%= current_user.id %>"><%= current_user.email %></a></li>
           <li>
             <form id="logout-form" action="/sessions" method="post">
               <input type="hidden" name="_method" value="delete" />
