--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -4,11 +4,12 @@
 <div class="full-container">
   <div class="row">
     <div class="col-8">
+      <h4>Today</h4>
       <div>
         <p><%= DateTime.now.strftime('%A, %b %m, %Y') %></p>
       </div>
       <canvas id="<%= @location.today_icon %>" width="128" height="128"></canvas>
-      <h4><%= @location.today_summary %></h4>
+      <h4><%= @location.today_summary[0...-1] %></h4>
       <p><%= @location.today_details %></p>
 
     </div>
@@ -21,18 +22,17 @@
 
   <div class="row">
     <% @location.future_weather.each do |day| %>
-      <div class="col">
+      <div class="col-4">
         <div class="future-day-contain">
-          <div><%= DateTime.strptime(day[0].to_s, '%s').strftime('%A') %></div>
-          <div>sum: <%= day[1] %></div>
-          <div>tempmax: <%= day[2] %></div>
+          <div class="future-day-name"><%= DateTime.strptime(day[0].to_s, '%s').strftime('%A') %></div>
+          <div><%= day[1][0...-1] %> with a high of <%= day[2].round %> degrees</div>
         </div>
       </div>
     <% end %>
   </div>
 
   <div class="row">
-    <div class="col">
+    <div class="col-12">
       <h4><%= DateTime.now.strftime('%B %-d') %> historical</h4>
       <%= line_chart [
         {name: "High", data: @location.past_high_temp},
@@ -40,8 +40,6 @@
       ], colors: ["red", "blue"] %>
     </div>
   <div>
-
-
 </div>
 
 <script src="https://rawgithub.com/darkskyapp/skycons/master/skycons.js"></script>
