--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,11 +1,3 @@
-
-
-figure {
-	margin: 5em auto;
-	width: 350px;
-	height: 150px;
-}
-
 body {
   margin: 1%;
 }
@@ -63,13 +55,27 @@ header {
 .search-contain {
   background: #ccffff;
   border: 1px solid #00e6e6;
-  margin: auto;
-  margin-bottom: 50px;
-  margin-top: 20px;
+  margin: 30px auto 30px;
+  padding-bottom: 10px;
   text-align: center;
-  width: 40%;
+  width: 325px;
 }
 
 #new-location {
-  margin-top: 20px;
+  text-align: center;
+}
+
+#input-button-contain {
+  background: #ccffff;
+  border: 1px solid #00e6e6;
+  margin: 30px auto 30px;
+  padding: 40px 0 40px 0;
+  width: 325px;
+}
+
+.new-location-input {
+  padding-bottom: 10px;
+}
+
+.submit-button {
 }
