config file try

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -35,7 +35,7 @@
       </ul>
     </nav>
     <div class="layout-header">
-      <h1>SkyCast Inc.</h1>
+      <h1>SkyCast</h1>
     </div>
   </header>
   <%= yield %>
