errors now showing for blank address as i was rendering the show page instead of the new location page

--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -1,22 +1,22 @@
 
-<h2>Results for <%= @location.formatted_address %></h2>
+<h2>Results for XXX@location.formatted_address %></h2>
 
 <div class="full-container">
   <div class="row">
     <div class="col-8">
       <h4>Today</h4>
       <div>
-        <p><%= DateTime.now.strftime('%A, %b %m, %Y') %></p>
+        <p>XXXDateTime.now.strftime('%A, %b %m, %Y') %></p>
       </div>
-      <canvas id="<%= @location.today_icon %>" width="128" height="128"></canvas>
-      <h4><%= @location.today_summary[0...-1] %></h4>
-      <p><%= @location.today_details %></p>
+      <canvas id="XXX@location.today_icon %>" width="128" height="128"></canvas>
+      <h4>XXX@location.today_summary[0...-1] %></h4>
+      <p>XXX@location.today_details %></p>
 
     </div>
 
     <div class="col-4">
       <h4>Currently</h4>
-      <p><%= @location.now_weather %></p>
+      <p>XXX@location.now_weather %></p>
     </div>
   </div>
 
@@ -24,8 +24,8 @@
     <% @location.future_weather.each do |day| %>
       <div class="col-4">
         <div class="future-day-contain">
-          <div class="future-day-name"><%= DateTime.strptime(day[0].to_s, '%s').strftime('%A') %></div>
-          <div><%= day[1][0...-1] %> with a high of <%= day[2].round %> degrees</div>
+          <div class="future-day-name">XXXDateTime.strptime(day[0].to_s, '%s').strftime('%A') %></div>
+          <div>XXXday[1][0...-1] %> with a high of XXXday[2].round %> degrees</div>
         </div>
       </div>
     <% end %>
@@ -34,9 +34,9 @@
   <div class="row-three">
     <div class="col-12">
       <h4>Historical Temperatures</h4>
-      <%= line_chart [
-        {name: "High", data: @location.past_high_temp},
-        {name: "Low", data: @location.past_low_temp}
+      XXXline_chart [
+        {name: "High", data: location.past_high_temp},
+        {name: "Low", data: location.past_low_temp}
       ], colors: ["red", "blue"] %>
     </div>
   <div>
