--- a/public/css/application.css
+++ b/public/css/application.css
@@ -45,16 +45,32 @@ header {
 
 .full-container {
   background: #ccffff;
-  border: 1px solid #00e6e6;
-  height: 400px;
-  margin: auto;
-  margin-bottom: 50px;
-  width: 80%;
+  margin: 0px auto 55px;
+  width: 650px;
+}
+
+.row-one {
+  display: flex;
+}
+
+.row-two {
+  display: flex;
+  height: 150px;
+}
+
+.col-8, .col-4, .col-12 {
+  border: 1px dotted #00e6e6;
+  flex: 1;
+  text-align: center;
+}
+
+.row-three {
+  text-align: center;
 }
 
 .search-contain {
   background: #ccffff;
-  border: 1px solid #00e6e6;
+  border: 1px dotted #00e6e6;
   margin: 30px auto 30px;
   padding-bottom: 10px;
   text-align: center;
@@ -67,7 +83,7 @@ header {
 
 #input-button-contain {
   background: #ccffff;
-  border: 1px solid #00e6e6;
+  border: 1px dotted #00e6e6;
   margin: 30px auto 30px;
   padding: 40px 0 40px 0;
   width: 325px;
@@ -78,8 +94,4 @@ header {
 }
 
 .submit-button {
-}
-
-.row-three {
-  text-align: center;
 }
