--- a/app/views/locations/show.erb
+++ b/app/views/locations/show.erb
@@ -1,5 +1,5 @@
 
-<h2>Results for <%= @location.formatted_address %></h2>
+<h2 class="results-address">Results for <%= @location.formatted_address %></h2>
 
 <div class="full-container">
   <div class="row-one">
