--- a/public/css/application.css
+++ b/public/css/application.css
@@ -49,6 +49,12 @@ header {
   width: 650px;
 }
 
+.results-address {
+  margin: auto;
+  padding: 20px 0 20px 0;
+  width: 650px;
+}
+
 .row-one {
   display: flex;
 }
